--- a/copypaste.yml
+++ b/copypaste.yml
@@ -12,3 +12,7 @@ for i in filename:
         flagname = "{}{}".format(i,j)
         #open(flagname, "x")
         os.remove(flagname)
+
+
+https://allianzindiaapps-myshadow.allianz.com/getmyshadowandroid/
+my@Shadow*2020
